divisione in package e adeguamenti per interfaccia grafica