@@ -1,16 +1,19 @@
+package algorithms.uninformedSearch;
+
+import game.BorderGuessrBoard;
+import game.BorderGuessrMove;
+import game.Country;
+import game.Nodo;
 import interfaces.Algorithm;
 import interfaces.Board;
 import interfaces.Move;
 
 import java.util.*;
 
-public class BreadthFirstSearch implements Algorithm {
-
-    public BreadthFirstSearch() {
-    }
-
+public class DepthFirstSearch implements Algorithm {
+    @Override
     public Move findBestMove(Board currentBoard) {
-        Move bestMove = breadthFirstSearch(currentBoard);
+        Move bestMove = depthFirstSearch(currentBoard);
 
         //se non ci sono country che vengono fuori dalla ricerca in ampiezza, ne restituisco uno a caso tra quelli confinanti non ancora detti
         if (bestMove == null) {
@@ -38,8 +41,7 @@ public class BreadthFirstSearch implements Algorithm {
         return bestMove;
     }
 
-
-    public Move breadthFirstSearch(Board currentBoard) {
+    public Move depthFirstSearch(Board currentBoard) {
         List<Nodo> frontiera = new ArrayList<>();
 
         BorderGuessrBoard borderGuessrBoard = (BorderGuessrBoard) currentBoard;
@@ -49,19 +51,18 @@ public class BreadthFirstSearch implements Algorithm {
             saidCountries.add(c.getName());
         }
 
-        //inizializzo la radice dell'albero che coincide con lo stato sorteggiato dal computer o l'ultimo inserito dall'utente
+        // inizializzo la radice dell'albero che coincide con lo stato sorteggiato dal computer o l'ultimo inserito dall'utente
         Nodo radice = new Nodo(null, 0, borderGuessrBoard.getBoard().getLast());
         frontiera.add(radice);
 
         Set<Nodo> esplorati = new HashSet<>();
 
         while (!frontiera.isEmpty()) {
-            System.out.println(frontiera.size());
-            Nodo nodo = frontiera.removeFirst();
+            // Modifica qui: prelevo l'ultimo nodo dalla frontiera (LIFO per DFS)
+            Nodo nodo = frontiera.remove(frontiera.size() - 1);
             esplorati.add(nodo);
 
             List<String> nomiFigli = new ArrayList<>();
-            System.out.println("Sto per farlo su: " + nodo.getStato());
             List<String> nomiStatiConfinantiNodoCorrente = nodo.getStato().getNeighbors();
             List<String> saidCountriesAndAncestors = new ArrayList<>();
             saidCountriesAndAncestors.addAll(saidCountries);
@@ -73,7 +74,7 @@ public class BreadthFirstSearch implements Algorithm {
                 n = n.getPadre();
             }
 
-            //seleziono quegli stati che confinano con il nodo corrente ma che non si trovano nel percorso verso la radice
+            // seleziono quegli stati che confinano con il nodo corrente ma che non si trovano nel percorso verso la radice
             for (String s : nomiStatiConfinantiNodoCorrente) {
                 boolean flag = false;
 
@@ -89,14 +90,14 @@ public class BreadthFirstSearch implements Algorithm {
                 }
             }
 
-            //se il nodo corrente non ha figli e si trova su un cammino di lunghezza dispari
+            // se il nodo corrente non ha figli e si trova su un cammino di lunghezza dispari
             // restituisci lo stato che si trova nel nodo immediatamente successivo alla radice,
             // altrimenti continua con l'esplorazione
             if (nomiFigli.isEmpty()) {
                 if ((nodo.getCosto() + saidCountries.size()) % 2 == 1) {
                     n = nodo;
 
-                    System.out.println("Nodo papabile : " + n.getStato().getName());
+                    System.out.println("game.Nodo papabile : " + n.getStato().getName());
                     System.out.print("Percorso :");
                     while (n.getPadre() != radice) {
                         n = n.getPadre();
@@ -118,12 +119,13 @@ public class BreadthFirstSearch implements Algorithm {
                     }
 
                     Nodo figlio = new Nodo(nodo, nodo.getCosto() + 1, country);
-                    System.out.println("Sto aggiungendo : " + figlio.getStato());
+                    // Modifica qui: aggiungo i figli in coda alla lista, così che vengano esplorati per ultimi
                     frontiera.add(figlio);
                 }
             }
         }
 
-        return null;
+        return null; // Restituisce null se non si trova alcun nodo valido
     }
+
 }
